tests/baselines/reference/importHelpersWithImportOrExportDefaultNoTslib.1(esmoduleinterop=true,module=amd).errors.txt
tests/cases/compiler/b.ts(1,10): error TS2354: This syntax requires an imported helper but module 'tslib' cannot be found.


==== tests/cases/compiler/a.ts (0 errors) ====
    export default class { }
    
==== tests/cases/compiler/b.ts (1 errors) ====
    export { default } from "./a";
             ~~~~~~~
!!! error TS2354: This syntax requires an imported helper but module 'tslib' cannot be found.
    